# Bluegrey

./: .gitignore  Dockerfile  Untitled.ipynb  config.py  docker-compose.yml  pyproject.toml  requirements.txt
bluegrey.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dashboard/: monitor.py
research/: 00_Run_Backtest.ipynb  01_Data_Check.ipynb  02_StatArb_Discovery.ipynb  04_Kalman_Sensitivity.ipynb  05_Pair_Discovery.py  Untitled.ipynb
research/.Trash-0/info/: 03_StatArb_Strategy.ipynb.trashinfo
research/00_data_assurance/: 01_fx_validation.ipynb
src/: config.py  data.py  execution.py  main.py  store.py
strategies/: base.py  mean_reversion_strategy.py
tools/: download_history.py  download_history_IBKR.py  download_history_old.py  download_history_polygon.py  repair_gap.py  temporary_gap.py
